# AmBar

./: .gitignore  LICENSE  README.md  bar_base.db  main.py  pyproject.toml  requirements.txt  setup.py
docs/md/: 00_MODULES.md  01_INCLUDE.md  for_md_docs.txt  installation_guide.md
docs/pdf/: for_pdf_docs.txt
include/: symbols.py  validations.py
include/modules/: commands.py  database.py  excel_table.py  factory.py
